fix: overflow

--- a/console/shell/index.sass
+++ b/console/shell/index.sass
@@ -73,6 +73,7 @@
                     
                     .ant-tree-node-content-wrapper
                         display: flex
+                        overflow: hidden
                         
                         .ant-tree-title
                             display: flex
